--- a/Portfolio 2.2/Index.html
+++ b/Portfolio 2.2/Index.html
@@ -38,8 +38,8 @@
 		<img src="imagens/Trabalhos/lettering.png" class="mySlides" id="i3" alt="Design do trabalho feito em design em letras, lettering">
 		<img src="imagens/Trabalhos/redesign.png" class="mySlides" id="i4" alt="redesign do jogo kingdom hearts 2, mudança na HUD do game">
 		
-		<button type="button" class="w3-circle" id="esquerda" onclick="plusDivs(-1)">E</button>
-		<button type="button" class="w3-circle" id="direita" onclick="plusDivs(+1)">D</button>
+		<button type="button" class="w3-circle" id="esquerda" onclick="plusDivs(-1)"></button>
+		<button type="button" class="w3-circle" id="direita" onclick="plusDivs(+1)"></button>
 		
 		<img src="monitor.png" class="img3" alt="imagem de um monitor em que são mostradas as imagens dos trabalhos realizados">
 		
