--- a/Portfolio 2.2/trabalhos.html
+++ b/Portfolio 2.2/trabalhos.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-	<link rel="stylesheet" type="text/css" href="styles.css">
-	<title>Portfolio Graciano Junior</title>
+	<link rel="stylesheet" type="text/css" href="trabalhos.css">
+<title>Portfolio Graciano Junior</title>
 	<meta charset="utf-8">
 </head>
 <body>
@@ -14,23 +14,9 @@
 			<li class="b3"><a href="contato.html"><h4>Contato</h4></a></li>
 		</ul>
 	</div>
-	<div class="conteudo">
 	
-	<div class="Quem">
-		<h2 class="i1">Quem sou eu</h2>
-		<img src="eu.png" class="img1" alt="Foto em moldura do profissional do portfolio">
-		<p class="t1">Estudande do curso de sistemas e midias digitais. Amante de games, ótimos filmes (principalmente de animação) e desenvolvimento pessoal</p>
-	</div>
-
-	<div class="Habilidades">
-		<h2 class="i2">Habilidades</h2>
-		<img src="Habilidades.png" class="img2" alt="Imagem cartoonizada de um cerebro meditando">
-		<p class="t2">Conhecimento intermediário em edição de vídeo e imagem. Programas mais usados Sony vegas pro, Photoshop, Gimp.</p>
-		<p class="t3">Conhecimento intermediário em programação. Liguagens que já usei: Javascript, C#, HTML e CSS</p>
-	</div>
-
-
-	<div class="Trabalhos">
+	<div class="conteudo">
+		<div class="Trabalhos">
 		<h2 class="i3">Trabalhos</h2>
 
 		<img src="imagens/Trabalhos/app.png" class="mySlides" id="i1" alt="Foto do prototipo referente ao aplicativo adoção de bolso">
@@ -38,13 +24,14 @@
 		<img src="imagens/Trabalhos/lettering.png" class="mySlides" id="i3" alt="Design do trabalho feito em design em letras, lettering">
 		<img src="imagens/Trabalhos/redesign.png" class="mySlides" id="i4" alt="redesign do jogo kingdom hearts 2, mudança na HUD do game">
 		
-		<button type="button" class="w3-circle" id="esquerda" onclick="plusDivs(-1)">E</button>
-		<button type="button" class="w3-circle" id="direita" onclick="plusDivs(+1)">D</button>
+		<button type="button" class="w3-circle" id="esquerda" onclick="plusDivs(-1)"></button>
+		<button type="button" class="w3-circle" id="direita" onclick="plusDivs(+1)"></button>
 		
 		<img src="monitor.png" class="img3" alt="imagem de um monitor em que são mostradas as imagens dos trabalhos realizados">
 		
-		<p class="t4" id="t4">Lorem ipsum habitant adipiscing cursus lectus egestas, placerat maecenas dui lectus cursus, nostra placerat phasellus dui conubia. pharetra ipsum aliquam dictumst eleifend pharetra porta neque quisque, ullamcorper iaculis sociosqu curabitur ut convallis mattis, viverra lorem eu netus non habitant justo.</p>
+		<p class="txt4" id="t4">Lorem ipsum habitant adipiscing cursus lectus egestas, placerat maecenas dui lectus cursus, nostra placerat phasellus dui conubia. pharetra ipsum aliquam dictumst eleifend pharetra porta neque quisque, ullamcorper iaculis sociosqu curabitur ut convallis mattis, viverra lorem eu netus non habitant justo.</p>
 	</div>
+		
 		<script>
 			var slideIndex = 0;
 		showDivs(slideIndex);
@@ -83,6 +70,7 @@
 	</script>
 
 </div>
+
 <div class="rodape">
 	
 	<div class="separar">
